--- a/pmacApp/Db/pmacController.template
+++ b/pmacApp/Db/pmacController.template
@@ -1,11 +1,11 @@
 ##############################################################
 #
-# Records to read asynPortDriver parameters from the param 
+# Records to read asynPortDriver parameters from the param
 # library for the class pmacController.
 #
-# The Asyn address is set as zero because that's what we use 
+# The Asyn address is set as zero because that's what we use
 # for controller parameters.
-# 
+#
 ##############################################################
 
 # % macro, PORT, The asyn port for the pmac controller
@@ -198,7 +198,7 @@ record(bo, "$(P):AxesReadonly")
 
 #
 # Read back the readonly mode for axes
-# 
+#
 record(bi, "$(P):AxesReadonly_RBV")
 {
     field(DTYP, "asynInt32")
@@ -229,13 +229,66 @@ record(mbbi, "$(P):PMACTYPE") {
   field(INP, "@asyn($(PORT),0)PMAC_VIM_cid")
 }
 
+# pmac number of CPU cores
+record(ai, "$(P):CPUNUMCORES") {
+  field(DESC, "Number of CPU cores")
+  field(DTYP, "asynInt32")
+  field(SCAN, "I/O Intr")
+  field(INP, "@asyn($(PORT),0)PMAC_C_CPU_NUM_CORES")
+}
+
 # % archiver 10 Monitor
 # This makes the component icon reflect the severity
 # % gui, $(PORT), sevr
-record(ai, "$(P):CPULOAD") {
+record(ai, "$(P):CPULOAD_0") {
   field(DTYP, "asynFloat64")
   field(SCAN, "I/O Intr")
-  field(INP, "@asyn($(PORT),0)PMAC_C_CPU_USAGE")
+  field(INP, "@asyn($(PORT),0)PMAC_C_CPU_USAGE_0")
+  field(PREC, "2")
+  field(EGU, "%")
+  field(HIGH, "60")
+  field(HSV, "MINOR")
+  field(HIHI, "80")
+  field(HHSV, "MAJOR")
+}
+
+# % archiver 10 Monitor
+# This makes the component icon reflect the severity
+# % gui, $(PORT), sevr
+record(ai, "$(P):CPULOAD_1") {
+  field(DTYP, "asynFloat64")
+  field(SCAN, "I/O Intr")
+  field(INP, "@asyn($(PORT),0)PMAC_C_CPU_USAGE_1")
+  field(PREC, "2")
+  field(EGU, "%")
+  field(HIGH, "60")
+  field(HSV, "MINOR")
+  field(HIHI, "80")
+  field(HHSV, "MAJOR")
+}
+
+# % archiver 10 Monitor
+# This makes the component icon reflect the severity
+# % gui, $(PORT), sevr
+record(ai, "$(P):CPULOAD_2") {
+  field(DTYP, "asynFloat64")
+  field(SCAN, "I/O Intr")
+  field(INP, "@asyn($(PORT),0)PMAC_C_CPU_USAGE_2")
+  field(PREC, "2")
+  field(EGU, "%")
+  field(HIGH, "60")
+  field(HSV, "MINOR")
+  field(HIHI, "80")
+  field(HHSV, "MAJOR")
+}
+
+# % archiver 10 Monitor
+# This makes the component icon reflect the severity
+# % gui, $(PORT), sevr
+record(ai, "$(P):CPULOAD_3") {
+  field(DTYP, "asynFloat64")
+  field(SCAN, "I/O Intr")
+  field(INP, "@asyn($(PORT),0)PMAC_C_CPU_USAGE_3")
   field(PREC, "2")
   field(EGU, "%")
   field(HIGH, "60")
